--- a/package.json
+++ b/package.json
@@ -4,38 +4,42 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-config": "^0.19.12",
+    "@expo/config-plugins": "~10.1.1",
+    "@expo/metro-config": "^0.20.17",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-picker/picker": "^2.9.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/material-top-tabs": "^7.2.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.0",
+    "expo": "^53.0.20",
+    "expo-constants": "~17.1.7",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "^7.0.5",
     "expo-secure-store": "^14.0.1",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "expo-status-bar": "~2.2.3",
+    "metro": "^0.82.5",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-pager-view": "^6.7.0",
+    "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.13.1",
     "react-native-progress": "^5.0.1",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-switch": "^1.5.1",
-    "react-native-tab-view": "^4.0.10",
-    "expo-constants": "~17.0.8"
+    "react-native-tab-view": "^4.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
